# dllm-RL

./: .gitignore  Dockerfile  README.md  __init__.py  check.py  compute_extract_answer_acc.py  constants.py  conversation.py  data_utils.py  diffu_grpo_config.py  diffu_grpo_train.py  diffu_grpo_trainer.py  generate.py  grpo_trainer.py  input_processor.py  interleaved_inferencer.py  log_utils.py  mm_utils.py  mmada_grpo_trainer.py  mmada_img_gen.py  mmada_text_gen.py  pmj.py  predict_t2i_edit.py  pyproject.toml  region_edit.py  reward_func.py  setup.py  test.py  train.py  utils.py  validate_thinkmorph_generation.py
lmms-eval/: config.json  pyproject.toml  refcoco_eval.py  refcoco_postproces.py  setup.py  test_parse.py
lmms-eval/docs/: task_guide.md
lmms-eval/lmms_eval/: __main__.py  evaluator.py  evaluator_utils.py  logging_utils.py  utils.py
lmms-eval/lmms_eval/api/: filter.py  group.py  instance.py  metrics.py  model.py  registry.py  samplers.py  task.py
lmms-eval/lmms_eval/caching/: cache.py
lmms-eval/miscs/: test_llava.py  test_scienceqa.py
lmms-eval/tools/: get_split_zip.py  get_video_avg_time.py  make_vatex.py  make_video_hf_dataset_from_json.py  regression.py
model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py  modeling_mmada.py  utils.py
model/dit/: dit_blocks.py
model/language_model/: llava_dream.py  llava_gemma.py  llava_llada.py  llava_llama.py  llava_mistral.py  llava_mixtral.py  llava_mpt.py  llava_qwen.py  llava_qwen_moe.py  modeling_llama.py
model/multimodal_encoder/: builder.py  clip_encoder.py  hf_vision.py  imagebind.py  mlcd_encoder.py  open_clip_encoder.py  siglip_encoder.py
model/multimodal_projector/: builder.py  pooler_projector.py  u_vit.py
model/multimodal_resampler/: builder.py  masked_drop.py  perceiver.py  qformer.py  spatial_pool.py
scripts/: README_lmms-eval.md  rl_lavidao_v-mm-region.yaml  rl_train.yaml  run_lmms-eval.sh  run_rl_thinkmorph-sft.sh  run_rl_thinkmorph-vanilla.sh  run_sft_train.sh  run_thinkmorph_grounding.sh  run_thinkmorph_inference.sh  test.sh  upload_jsonl_dataset_to_hub.py  zero2.json
scripts/accelerate_configs/: config.yaml
scripts/train/: base.sh  readme.MD  s1-gnd.sh  s2-1024.sh  s2-256.sh  s3-unified.sh  train_thinkmorph_sft.sh
slurm_monitor/: server.py
slurm_monitor/templates/: index.html
train/: infill_utils.py  llava_trainer.py  logging.py  lr_schedulers.py  mmada_train_sft.py  train.py  train_mem.py  utils.py
vlm_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+507 files in other folders)
