[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "0.1.0"
description = "llava"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
  "torch",
  "flash-attn",
  "tqdm",
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "sentencepiece",
  "huggingface-hub",
  "omegaconf",
  "liger-kernel",
  "termcolor",
  "nest-asyncio",
  "ipykernel",
  "math-verify",
  "wandb",
  "tensorboard",
  "accelerate",
  "diffusers",
  "deepspeed",
  "peft",
  "bitsandbytes",
  "datasets",
  "evaluate",
  "safetensors",
  "jaxtyping",
  "typeguard",
  "trl",
  "xformers==0.0.31",

  # logical dependency name (must match lmms-eval's project.name)
  "lmms-eval",
]

[tool.uv.sources]
lmms-eval = { path = "lmms-eval", editable = true }
