[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-env"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "torch",
  "tqdm",
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "sentencepiece",
  "huggingface-hub",
  "omegaconf",
  "liger-kernel",
  "termcolor",
  "nest-asyncio",
  "ipykernel",
  "math-verify",
  "wandb",
  "tensorboard",
  "accelerate",
  "diffusers",
  "deepspeed",
  "peft",
  "bitsandbytes",
  "datasets",
  "evaluate",
  "safetensors",
  "jaxtyping",
  "typeguard",
  "trl",
  "xformers",
  "transformers==4.53.3",
  "lmms-eval",
]

[tool.uv.sources]
lmms-eval = { path = "lmms-eval", editable = true }
